--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <p>Выберите изделия:</p>
             <ul>
                 <li><a href="#">У32</a></li>
+                <li><a href="#">У24</a></li>
                 <li><a href="#">УТ56</a></li>
                 <li><a href="#">УТ61</a></li>
             </ul>
