--- a/index.html
+++ b/index.html
@@ -23,8 +23,11 @@
             <p>Выберите изделия:</p>
             <ul>
                 <li><a href="#">У32</a></li>
-                <li><a href="#">УТ56</a></li>
-                <li><a href="#">УТ61</a></li>
+                <li><a href="#">Брус 100x100 м3</a></li>
+                <li><a href="#">Брус 30x70 м3</a></li>
+                <li><a href="#">ОСБ м3 S=9</a></li>
+                <li><a href="#">ОСБ м3 S=18</a></li>
+                <li><a href="#">Бумага БУБ</a></li>
             </ul>
         </div>
         
