--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </span></div></h2>
             <p>Выберите изделия:</p>
             <ul>
-                <li><a href="#">У32</a></li>
+                <li><a href="#">Ящик У32</a></li>
                 <li><a href="#">Брус 100x100 м3</a></li>
                 <li><a href="#">Брус 30x70 м3</a></li>
                 <li><a href="#">ОСБ м3 S=9</a></li>
