--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
             <p>Выберите изделия:</p>
             <ul>
                 <li><a href="#">Ящик У32</a></li>
-                <li><a href="#">Брус 100x100 м3</a></li>
-                <li><a href="#">Брус 30x70 м3</a></li>
-                <li><a href="#">ОСБ м3 S=9</a></li>
-                <li><a href="#">ОСБ м3 S=18</a></li>
+                <li><a href="#">Брус 100x100 м<sup>3</sup></a></li>
+                <li><a href="#">Брус 30x70 м<sup>3</sup></a></li>
+                <li><a href="#">ОСБ м<sup>3</sup> S=9</a></li>
+                <li><a href="#">ОСБ м<sup>3</sup> S=18</a></li>
                 <li><a href="#">Бумага БУБ</a></li>
             </ul>
         </div>
